--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
     <a [routerLink]="['/user-profile']">CONTACT</a>
   </li>
 </ul>
+<app-developer></app-developer>
 
 <router-outlet></router-outlet>
